@@ -1,3 +1,7 @@
+2008-09-13  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* pokernetwork/userstats.py (UserStats): Created class and file.
+
 2008-09-10  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* pokernetwork/pokerpackets.py: Added info about tourney break
